@@ -4,6 +4,9 @@
 	LaTeX-like parser to change font or font size
 	- Also some bug fixes to LaTeX-like parser
 	- Modeless dialogs fixed to use close instead of done
+	- Fitting can now fit selected ranges of data (see fitRange parameter)
+	- Various fitting sanity checks
+	- Fitting should now work for functions of y as well as x
 	
 * 2005-05-09 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fix problem with log axis if minimum is zero
